# sodapy2

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh  sodapy2.code-workspace
.github/workflows/: python-lint-test.yaml
examples/: basic_queries.ipynb  soql_queries.ipynb  soql_queries.py
sodapy2/: __init__.py  constants.py  response.py  socrata.py  utils.py
tests/: test_constants.py  test_socrata.py  test_utils.py
tests/integration/: test_i_socrata.py
tests/test_data/: 403_response.json  get_dataset_metadata.json  get_datasets.json  get_songs.json
tests/unit/: test_u_constants.py  test_u_response.py  test_u_socrata.py  test_u_utils.py
tests/unit/test_data/: get_songs_unicode.json
